--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "nodemon server"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "jimp": "^0.22.12",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
